fix: 🐛 dark mode modifications for order items

--- a/apps/rose/src/app/features/pages/orders/orders.component.scss
+++ b/apps/rose/src/app/features/pages/orders/orders.component.scss
@@ -168,6 +168,7 @@
   background-color: var(--order-item-bg);
   border-radius: 8px;
   margin: 1rem;
+  
 }
 
 .order-item {
@@ -179,6 +180,7 @@
   box-shadow: 0 1px 3px rgba(0,0,0,0.05);
   transition: all 0.3s ease;
   margin-top: 1rem;
+  color:var(--order-items-color);
 
   img {
     width: 90px;
