--- a/apps/rose/src/app/shared/styles/_variables.scss
+++ b/apps/rose/src/app/shared/styles/_variables.scss
@@ -568,8 +568,9 @@
   --red-badge-bg:var(--red-600);
   --badge-color: var(--white);
   --order-items-bg: var(--zinc-800);
-  --payment-color: var(--zinc-500);
+  --payment-color: var(--zinc-300);
   --order-item-bg: var(--zinc-600);
+  --order-items-color:var(--zinc-100);
   --order-item-title: var(--soft-pink-400);
   --quantity-color: var(--soft-pink-400);
   --order-ratings: var(--blue-700);
